# backend/infra/openapi.yaml
@@ -268,6 +268,42 @@ paths:
         required: true
         schema:
           type: string
+    put:
+      summary: Update Saved Discourse
+      description: Endpoint structure for /saved-discourses/{user_email}/{discourse_id}
+      responses:
+        '400':
+          description: Bad Request
+        '500':
+          description: Server Error
+        '401':
+          description: Unauthorized
+        '404':
+          description: Resource Not Found
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: object
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: user_email
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: discourse_id
+        in: path
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
   /chats/{user_email}:
     get:
       summary: Get User Chats
